# uploader

./: .gitignore  PROJECT_UPLOAD_CONTRACT.md  README.md  config.toml.example  pyproject.toml
projects/: double-pendulum.toml  line.toml  lpt2d.toml  motiontwin.toml  tiki.toml
scripts/: stage_double_pendulum.py
src/uploader/: __init__.py  atomic.py  cli.py  config.py  engine.py  probe.py  state.py  tick.py  youtube.py
src/uploader/queue/: __init__.py  base.py  local.py  objectstore.py
systemd/user/: uploader.service  uploader.timer
tests/: framework.py  test_cli.py  test_config.py  test_engine.py  test_probe.py  test_queue.py  test_tick.py  test_youtube.py
